Finished Data Validation

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -183,12 +183,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-20 13:59:11,401: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2024-07-20 13:59:11,403: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-07-20 13:59:11,405: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2024-07-20 13:59:11,406: INFO: common: created directory at: artifacts]\n",
-      "[2024-07-20 13:59:11,407: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2024-07-20 13:59:13,138: INFO: 2716906135: artifacts/data_ingestion/WineQT.zip download! with following info: \n",
+      "[2024-07-20 22:00:54,617: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2024-07-20 22:00:54,623: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-07-20 22:00:54,627: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-07-20 22:00:54,629: INFO: common: created directory at: artifacts]\n",
+      "[2024-07-20 22:00:54,633: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2024-07-20 22:00:55,205: INFO: 2716906135: artifacts/data_ingestion/WineQT.zip download! with following info: \n",
       "Connection: close\n",
       "Content-Length: 21299\n",
       "Cache-Control: max-age=300\n",
@@ -199,19 +199,19 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: C39A:3984FC:2BAA490:2E20235:669C2520\n",
+      "X-GitHub-Request-Id: D5AE:7784E:2280754:24837CB:669C9462\n",
       "Accept-Ranges: bytes\n",
-      "Date: Sat, 20 Jul 2024 20:59:13 GMT\n",
+      "Date: Sun, 21 Jul 2024 05:00:55 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-pao-kpao1770047-PAO\n",
-      "X-Cache: MISS\n",
+      "X-Served-By: cache-pao-kpao1770045-PAO\n",
+      "X-Cache: HIT\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1721509153.997756,VS0,VE153\n",
+      "X-Timer: S1721538055.069878,VS0,VE166\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 93132cf5fe4528ddaab80e7f6f27f0b20d4dfc8d\n",
-      "Expires: Sat, 20 Jul 2024 21:04:13 GMT\n",
+      "X-Fastly-Request-ID: ddba5d7df02ae47bc4d5416526cb46f890fd0435\n",
+      "Expires: Sun, 21 Jul 2024 05:05:55 GMT\n",
       "Source-Age: 0\n",
       "\n",
       "]\n"
